<resources>
    <string name="app_name">E-UAPV Emploi du temps</string>
    <string name="title_acceuil">Acceuil</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_evaluations">Èvaluations</string>
    <string name="title_preferences">Préférences</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_schedule">Emploi d\'aujourd\'hui</string>

    <string name="promotion_prompt">Choisissez une promotion:</string>

    <string name="grpTd_prompt">Choisissez un groupe de TD:</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="time_12am">12 am</string>
    <string name="time_1am">1 am</string>
    <string name="time_2am">2 am</string>
    <string name="time_3am">3 am</string>
    <string name="time_4am">4 am</string>
    <string name="time_5am">5 am</string>
    <string name="time_6am">6 am</string>
    <string name="time_7am">7 am</string>
    <string name="time_8am">8 am</string>
    <string name="time_9am">9 am</string>
    <string name="time_10am">10 am</string>
    <string name="time_11am">11 am</string>
    <string name="time_12pm">12 pm</string>
    <string name="time_13pm">13 pm</string>
    <string name="time_14pm">14 pm</string>
    <string name="time_15pm">15 pm</string>
    <string name="time_16pm">16 pm</string>
    <string name="time_17pm">17 pm</string>
    <string name="time_18pm">18 pm</string>
    <string name="time_19pm">19 pm</string>
    <string name="time_20pm">20 pm</string>
    <string name="time_21pm">21 pm</string>
    <string name="time_22pm">22 pm</string>
    <string name="time_23pm">23 pm</string>
    <string name="time_24pm">24 pm</string>
    <string name="birth_day">I am going to birthday party</string>
    <string name="current_day_date">1 Mai, 2019</string>

</resources>
