<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_acceuil"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_acceuil" />

    <item
        android:id="@+id/navigation_agenda"
        android:icon="@drawable/ic_agenda_orange"
        android:title="@string/title_agenda" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_evaluations"
        android:icon="@drawable/ic_exams_orange"
        android:title="@string/title_evaluations" />

    <item
        android:id="@+id/navigation_preferences"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_preferences" />

</menu>
